Minha versão estilizada do jogo

--- a/jogo.html
+++ b/jogo.html
@@ -23,7 +23,7 @@
       </div>
       <div class="row justify-content-center" id="div1">
         <p id="resposta"></p>
-        <button id="joganovamente">Jogar novamente</button>
+        <button id="joganovamente">Jogar  de novamente</button>
         <button id="reiniciar" class="invisivel">Reiniciar</button>
       </div>
     </div>
